Closed Bug 1649410 Opened 5 years ago Closed 5 years ago

[socket-process] test_version_fallback() in netwerk/test/unit/test_http3.js fails

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: michal, Assigned: michal)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

The test works correctly, so http/1.1 is used to download the URL, but Alt-Svc header which is reset in nsHttpTransaction::Restart() is not propagated from socket process to the main process and the test fails with:

 0:05.34 PASS testOnStartRequest - [testOnStartRequest : 462] true == true
 0:05.34 PASS testOnStartRequest - [testOnStartRequest : 464] 0 == 0
 0:05.34 PASS testOnStartRequest - [testOnStartRequest : 465] 200 == 200
 0:05.36 PASS testOnStopRequest - [testOnStopRequest : 473] 0 == 0
 0:05.36 pid:525761 routed is foo.example.com:44837
 0:05.37 FAIL testOnStopRequest - [testOnStopRequest : 480] "foo.example.com:44837" == "0"
Summary: [socket-proc] test_version_fallback() in netwerk/test/unit/test_http3.js fails → [socket-process] test_version_fallback() in netwerk/test/unit/test_http3.js fails
Depends on: 1587353
No longer blocks: 1627910

Propagate Alt-Used request header set in socket process to parent process.

Assignee: nobody → michal.novotny
Status: NEW → ASSIGNED
Pushed by mnovotny@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d6d477621a75 [socket-process] test_version_fallback() in netwerk/test/unit/test_http3.js fails r=necko-reviewers,kershaw
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: