Bug 1649410 - [socket-process] test_version_fallback() in netwerk/test/unit/test_http3.js fails r=necko-reviewers,kershaw

Propagate Alt-Used request header set in socket process to parent process.

Differential Revision: https://phabricator.services.mozilla.com/D81714